--- a/comparador.html
+++ b/comparador.html
@@ -31,8 +31,8 @@
 
     <div class="container">
         <div class="image-compare">
-            <img src="S2L2A_T30SWF-f2ddfcc3f-20250913_TCI.jpg" alt="Imagen Antes" />
-            <img src="S2L2Ax10_T30SWF-f2ddfcc3f-20250913_TCI.jpg" alt="Imagen Después" />
+            <img src="https://github.com/abdu016/Superresolution/blob/main/S2L2A_T30SWF-f2ddfcc3f-20250913_TCI.jpg" alt="Imagen Antes" />
+            <img src="https://github.com/abdu016/Superresolution/blob/main/S2L2A_T30SWF-f2ddfcc3f-20250913_TCI.jpg" alt="Imagen Después" />
         </div>
     </div>
 
@@ -52,4 +52,5 @@
     </script>
 
 </body>
+
 </html>
